add event listeners

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <label for="input-age">Fascia d'età</label>
                 <select class="form-select" id="input-age">
                     <option selected>Choose...</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    <option value="1">Under18</option>
+                    <option value="2">Maggiorenne</option>
+                    <option value="3">Over65</option>
                 </select>
             </div>
             <div class="col-12">
