--- a/index.html
+++ b/index.html
@@ -6,45 +6,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Bootstrap 5.2.3 css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Bootstrap 5.2.3 js -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+    <!-- My Style -->
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-4">
-                <label for="input-username">Nome Cognome</label>
-                <input class="form-control" type="text" name="" id="input-username">
-            </div>
-            <div class="col-4">
-                <label for="input-distance">Km da percorrere</label>
-                <input class="form-control" type="number" name="" id="input-distance">
-            </div>
-            <div class="col-4">
-                <label for="input-age">Fascia d'età</label>
-                <select class="form-select" id="input-age">
-                    <option selected>Choose...</option>
-                    <option value="1">Under18</option>
-                    <option value="2">Maggiorenne</option>
-                    <option value="3">Over65</option>
-                </select>
+            <div class="col-12">
+                <h1 class="ms-color-light text-uppercase fw-bolder text-center fs-2 my-3">Calcola il prezzo del tuo biglietto</h1>
             </div>
             <div class="col-12">
-                <button id="submit">Genera</button>
-                <button id="reset">Annulla</button>
+                <div class="card p-4">
+                    <div class="row g-3">
+                        <div class="col-4">
+                            <label for="input-username">Nome Cognome</label>
+                            <input class="form-control" type="text" name="" id="input-username">
+                        </div>
+                        <div class="col-4">
+                            <label for="input-distance">Km da percorrere</label>
+                            <input class="form-control" type="number" name="" id="input-distance">
+                        </div>
+                        <div class="col-4">
+                            <label for="input-age">Fascia d'età</label>
+                            <select class="form-select" id="input-age">
+                                <option selected>Choose...</option>
+                                <option value="1">Under18</option>
+                                <option value="2">Maggiorenne</option>
+                                <option value="3">Over65</option>
+                            </select>
+                        </div>
+                        <div class="col-12 d-flex justify-content-center align-items-center gap-3">
+                            <button class="btn btn-secondary ms-bg-secondary ms-color-primary" id="submit">Genera</button>
+                            <button class="btn btn-secondary ms-bg-secondary ms-color-primary" id="reset">Annulla</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col" id="temporary-target">
-
+            <div class="col-12 hidden">
+                <h2 class="ms-color-light text-uppercase fw-bolder text-center fs-2 mt-4 mb-3">Il tuo biglietto</h2>
+            </div>
+            <div class="col-12 hidden">
+                <div class="card rounded-0 p-3" id="temporary-target">
+                    <table class="table">
+                        <thead>
+                          <tr>
+                            <th scope="col">
+                                <h3 class="text-uppercase ms-color-dark fs-5 fw-bolder">Dettaglio passeggeri</h3>
+                            </th>
+                            <th scope="col">Offerta</th>
+                            <th scope="col">Carrozza</th>
+                            <th scope="col">Codice CP</th>
+                            <th scope="col">Costo biglietto</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row" id="target-name">
+                                Lorem, ipsum.
+                            </th>
+                            <td id="target-ticket-type">
+                                Lorem, ipsum.
+                            </td>
+                            <td id="target-carriage">12</td>
+                            <td id="target-carriage-code">123145</td>
+                            <td id="target-price">1231</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
             </div>
         </div>
     </div>
