add padding to buttons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <option value="3">Over65</option>
                             </select>
                         </div>
-                        <div class="col-12 d-flex justify-content-center align-items-center gap-3">
+                        <div class="col-12 d-flex justify-content-center align-items-center gap-3 pt-5">
                             <button class="btn btn-secondary ms-bg-secondary ms-color-primary" id="submit">Genera</button>
                             <button class="btn btn-secondary ms-bg-secondary ms-color-primary" id="reset">Annulla</button>
                         </div>
