[ref] now better variable names

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                             <label class="ms-color-primary fw-semibold text-center" for="input-age">Fascia d'età</label>
                             <select class="form-select" id="input-age">
                                 <option selected>Choose...</option>
-                                <option value="1">Under18</option>
-                                <option value="2">Maggiorenne</option>
-                                <option value="3">Over65</option>
+                                <option value="under-18">Under18</option>
+                                <option value="over-18">Maggiorenne</option>
+                                <option value="over-65">Over65</option>
                             </select>
                         </div>
                         <div class="col-12 d-flex justify-content-center align-items-center gap-3 pt-5">
